--- a/keybindings.conf
+++ b/keybindings.conf
@@ -14,6 +14,7 @@ $term = kitty
 $editor = code
 $file = dolphin
 $browser = firefox
+$google = google-chrome-stable
 
 # Window/Session actions
 bind = $mainMod, C, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, kill the window on focus
@@ -29,14 +30,14 @@ bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # toggle waybar
 
 # goer
 bind = $CONTROL SHIFT, Q, exec, ~/shell/gitshell/sest # jietu
-
+bind = $CONTROL SHIFT, H, exec, ~/.config/hypr/scripts/sysmonlaunch.sh  # open htop/btop if installed or default to top (system monitor)
+bind = $CONTROL SHIFT, B, exec, ~/.config/hypr/scripts/btop.sh
 
 # Application shortcuts
 bind = $mainMod, return, exec, $term  # open terminal
 bind = $mainMod, E, exec, $file # open file manager
 bind = $mainMod, D, exec, $editor # open vscode
 bind = $mainMod, F, exec, $browser # open browser
-bind = $CONTROL SHIFT, ESCAPE, exec, ~/.config/hypr/scripts/sysmonlaunch.sh  # open htop/btop if installed or default to top (system monitor)
 
 # Rofi is toggled on/off if you repeat the key presses
 bind = $mainMod, A, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
