--- a/keybindings.conf
+++ b/keybindings.conf
@@ -24,7 +24,7 @@ bind = $mainMod, W, togglefloating, # toggle the window on focus to float
 bind = $mainMod, G, togglegroup, # toggle the window on focus to float
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, L, exec, swaylock # lock screen
-bind = $mainMod, backspace, exec, ~/.config/hypr/scripts/logoutlaunch.sh 1 # logout menu
+bind = $mainMod, X, exec, ~/.config/hypr/scripts/logoutlaunch.sh 1 # logout menu
 bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # toggle waybar
 
 
@@ -38,6 +38,7 @@ bind = $mainMod, return, exec, $term  # open terminal
 bind = $mainMod, E, exec, $file # open file manager
 bind = $mainMod, D, exec, $editor # open vscode
 bind = $mainMod, F, exec, $browser # open browser
+bind = $mainMod, Q, exec, $google # open google
 
 # Rofi is toggled on/off if you repeat the key presses
 bind = $mainMod, A, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
